adding readme.md

--- a/train/notebook.ipynb
+++ b/train/notebook.ipynb
@@ -4430,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -4442,10 +4442,10 @@
     {
      "data": {
       "text/plain": [
-       "['model.m5']"
+       "['../models/model.m5']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
